@@ -1,3 +1,8 @@
+2001-12-16  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02666] resizing on xterm with gpm support
+	* terms.c (mouse_init): check Gpm_Open return value, signal(SIGWINCH)
+
 2001-12-16  Rin Okuyama <okuyama@cna.ne.jp>
 
 	* [w3m-dev 02664] install-sh -s option
